--- a/commonbase/build.gradle
+++ b/commonbase/build.gradle
@@ -4,6 +4,10 @@ ext.retrofit_version = '2.5.0'
 ext.rxndroid_version = '2.1.1'
 ext.interceptor_version = '3.14.1'
 
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'org.jetbrains.kotlin.kapt'
+
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
     buildToolsVersion rootProject.ext.android["buildToolsVersion"]
@@ -34,15 +38,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     // rx
-    api "io.reactivex.rxjava2:rxandroid:$rxndroid_version"
-    api "io.reactivex.rxjava2:rxjava:$rxjava_version"
-    api "com.squareup.retrofit2:retrofit:$retrofit_version"
     api "com.squareup.retrofit2:converter-gson:$retrofit_version"
     api "com.squareup.retrofit2:converter-scalars:$retrofit_version"
-    api "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-    //event bus
-    //BottomNavigationView
-    api 'org.greenrobot:eventbus:3.1.1'
+
     // titleBar  toast
     api 'com.hjq:toast:6.0'
     api 'com.hjq:titlebar:5.0'
@@ -63,7 +61,44 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.3'
     api 'com.tbruyelle.rxpermissions:rxpermissions:0.7.0@aar'
 
-    // banner轮播图
-    implementation'com.youth.banner:banner:1.4.10'
+
+
+    api rootProject.ext.deps.constraint
+    api rootProject.ext.deps.recyclerview
+    api rootProject.ext.deps.supportV7
+    api rootProject.ext.deps.supportV4
+    api rootProject.ext.deps.rxlifecycle
+    api rootProject.ext.deps.immersionbar
+    api rootProject.ext.deps.butterknife
+    kapt rootProject.ext.deps.butterknifeCompiler
+    api rootProject.ext.deps.eventbus
+    api rootProject.ext.deps.okhttp
+    api rootProject.ext.deps.retrofit
+    api rootProject.ext.deps.okhttp
+    api rootProject.ext.deps.okhttpLogging
+    api rootProject.ext.deps.retorfitrxjava
+    api rootProject.ext.deps.gson
+    api rootProject.ext.deps.multidex
+    api rootProject.ext.deps.glide
+    //kotlin
+    api rootProject.ext.deps.kotlinReflect
+    api rootProject.ext.deps.kotlinStdlib
+    //数据库
+    debugApi rootProject.ext.deps.objectboxBrower
+    releaseApi rootProject.ext.deps.objectbox
+    //bugly
+    api rootProject.ext.deps.bugly
+    //融云
+//    api rootProject.ext.deps.imlib
+    //banner
+    api rootProject.ext.deps.banner
+    //pinyin
+    api rootProject.ext.deps.pinyin
+    api rootProject.ext.deps.okhttpProfiler
+
+//    api rootProject.ext.deps.shareWechat
+//    api rootProject.ext.deps.hmsBase
+//    api rootProject.ext.deps.hmsPush
+//    api rootProject.ext.deps.flymePush
 
 }
