--- a/config.gradle
+++ b/config.gradle
@@ -1,14 +1,124 @@
 ext {
 
     android = [
-            compileSdkVersion: 28,
-            buildToolsVersion: "28.0.3",
-            minSdkVersion    : 17,
-            targetSdkVersion : 28,
+            compileSdkVersion: 27,
+            buildToolsVersion: "27.0.3",
+            minSdkVersion    : 21,
+            targetSdkVersion : 27,
+            versionName      : "1.0.0",
             versionCode      : 1,
-            versionName      : "1.0"
     ]
 
 
+    flag = [
+            hostType: 0,//0 测试服，1 正式服
+    ]
 
+    depsVersion = [
+            support         : "27.1.1",
+            okhttp          : "3.10.0",
+            butterKnife     : "8.8.1",
+            objectbox       : "2.3.4",
+            kotlin          : "1.3.40",
+            kotlinCoroutines: "1.3.2",
+            hmsVersion      : "2.6.1.301",
+    ]
+
+    deps = [
+            // ------------- Android -------------
+            supportV4          : "com.android.support:support-v4:${depsVersion.support}",
+            supportV7          : "com.android.support:appcompat-v7:${depsVersion.support}}",
+            recyclerview       : "com.android.support:recyclerview-v7:${depsVersion.support}",
+            cardviewV7         : "com.android.support:cardview-v7:${depsVersion.support}",
+            grildlayout        : "com.android.support:gridlayout-v7:${depsVersion.support}",
+            appcompat          : "com.android.support:appcompat-v7:${depsVersion.support}",
+            design             : "com.android.support:design:${depsVersion.support}",
+            percent            : "com.android.support:percent:${depsVersion.support}",
+            constraint         : "com.android.support.constraint:constraint-layout:1.1.3",
+            multidex           : "com.android.support:multidex:1.0.1",
+            annotations        : "com.android.support:support-annotations:${depsVersion.support}",
+
+            // ------------- Test dependencies -------------
+            junit              : "junit:junit:4.12",
+            compiletesting     : "com.google.testing.compile:compile-testing:0.9",
+
+            // ------------- Three Parts -------------
+            eventbus           : "org.greenrobot:eventbus:3.1.1",
+
+            butterknife        : "com.jakewharton:butterknife:${depsVersion.butterKnife}",
+            butterknifeCompiler: "com.jakewharton:butterknife-compiler:${depsVersion.butterKnife}",
+            retrofit           : "com.squareup.retrofit2:retrofit:2.6.0",
+            okhttp             : "com.squareup.okhttp3:okhttp:3.12.3",
+            okhttpLogging      : "com.squareup.okhttp3:logging-interceptor:3.12.3",
+            retorfitrxjava     : "com.squareup.retrofit2:adapter-rxjava2:2.4.0",
+            rxandroid          : "io.reactivex.rxjava2:rxandroid:2.0.2",
+            //解决rxjava内存泄漏
+            rxlifecycle        : "com.trello.rxlifecycle2:rxlifecycle-components:2.2.2",
+
+            gson               : "com.google.code.gson:gson:2.8.5",
+
+            glide              : "com.github.bumptech.glide:glide:4.8.0",
+
+            banner             : "com.youth.banner:banner:1.4.10",
+
+            flycoTabLayout     : "com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar",
+
+            //键盘
+            kpswitch           : "cn.dreamtobe.kpswitch:library:1.6.1",
+
+            luban              : "top.zibin:Luban:1.1.3",
+
+            hotfix             : "com.aliyun.ams:alicloud-android-hotfix:3.2.8",
+
+            // ------------- 七牛 -------------
+            qiniuSdk           : "com.qiniu:qiniu-android-sdk:7.3.+",
+            qiniuDns           : "com.qiniu:happy-dns:0.2.8",
+
+
+
+            immersionbar       : "com.gyf.immersionbar:immersionbar:3.0.0-beta05",
+
+            leakcanaryDebug    : "com.squareup.leakcanary:leakcanary-android:1.6.3",
+
+            leakcanaryRelease  : "com.squareup.leakcanary:leakcanary-android-no-op:1.6.3",
+
+
+            // ------------- 数据库-------------
+            objectboxBrower    : "io.objectbox:objectbox-android-objectbrowser:${depsVersion.objectbox}",
+            objectbox          : "io.objectbox:objectbox-android:${depsVersion.objectbox}",
+
+            // ------------- kotlin-------------
+            kotlinReflect      : "org.jetbrains.kotlin:kotlin-reflect:${depsVersion.kotlin}",
+            kotlinStdlib       : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${depsVersion.kotlin}",
+            //kotlin协程
+            kotlinCoroutines   : "org.jetbrains.kotlinx:kotlinx-coroutines-core:${depsVersion.kotlinCoroutines}",
+            ktx                : 'androidx.core:core-ktx:+',
+
+            //-------------- bugly -------------
+            bugly              : "com.tencent.bugly:crashreport:3.0.0",
+            buglyNative        : "com.tencent.bugly:nativecrashreport:3.7.1",
+
+
+
+            //融云
+            imlib              : "cn.rongcloud.sdk:im_lib:2.9.18",
+
+            //Banner
+            banner             : "com.youth.banner:banner:1.4.10",
+
+            //pinyin
+            pinyin             : "com.belerweb:pinyin4j:2.5.1",
+
+            //OkHttp调试插件
+            okhttpProfiler     : "com.itkacher.okhttpprofiler:okhttpprofiler:1.0.5",
+
+            shareWechat        : "com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+",
+
+            blockcanary        : "com.github.markzhai:blockcanary-android:1.5.0",
+            //推送
+            hmsBase            : "com.huawei.android.hms:base:${depsVersion.hmsVersion}",
+            hmsPush            : "com.huawei.android.hms:push:${depsVersion.hmsVersion}",
+            flymePush          : "com.meizu.flyme.internet:push-internal:3.6.+@aar",
+
+    ]
 }
