--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -124,6 +124,7 @@
         <activity android:name=".activity.ApprovedMemoActivity" />
         <activity android:name=".activity.SplashActivity" />
         <activity android:name=".activity.CustomerInformationActivity2" />
+        <activity android:name=".todo.detail.TodoDetailActivity" />
         <activity android:name=".activity.CustomerInformationcompanyActivity" />
         <activity android:name=".activity.ForgetThePasswordActivity" />
         <activity android:name=".activity.ExamineActivity"></activity>
