--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,9 +53,8 @@
     <application
         android:name="hxz.www.commonbase.app.BaseApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:theme">
@@ -118,6 +117,7 @@
         <activity android:name=".activity.NewSurveyActivity"  android:screenOrientation="portrait"/>
         <activity android:name=".activity.ApprovedMemoActivity"  android:screenOrientation="portrait"/>
         <activity android:name=".buinese.detail.BusineseDetailActivity"  android:screenOrientation="portrait"/>
+        <activity android:name=".buinese.more.BusineseMoreActivity"  android:screenOrientation="portrait"/>
         <activity android:name=".activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
